[gd_scene load_steps=9 format=3 uid="uid://ds0k3odwlf6rs"]

[ext_resource type="Script" path="res://Scenes/BarbHouse/BarbHouse.gd" id="1_2x6pr"]
[ext_resource type="Texture2D" uid="uid://ckvu5uled4w6f" path="res://Sprites/Structure/medievalStructure_09.png" id="1_346tt"]
[ext_resource type="Texture2D" uid="uid://btedmd1m26sd8" path="res://Sprites/UI/PNG/grey_circle.png" id="3_g5spe"]
[ext_resource type="Texture2D" uid="uid://bu7jma7xblep" path="res://Sprites/UI/PNG/blue_tick.png" id="4_vpdck"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b020"]
size = Vector2(55, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsn6n"]
size = Vector2(89, 111)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtisn"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.211765, 0.8, 0.8, 1)
border_blend = true

[sub_resource type="NavigationPolygon" id="NavigationPolygon_h7uo0"]
vertices = PackedVector2Array(-45, -41, 45, -40, 46, 71, -44, 70)
polygons = [PackedInt32Array(0, 1, 2, 3)]
outlines = [PackedVector2Array(-45, -41, 45, -40, 46, 71, -44, 70)]

[node name="BarbHouse" type="StaticBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
input_pickable = true
script = ExtResource("1_2x6pr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_346tt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_0b020")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 15.5)
shape = SubResource("RectangleShape2D_gsn6n")

[node name="Selected" type="Panel" parent="."]
y_sort_enabled = true
offset_left = -28.0
offset_top = -30.0
offset_right = -19.0
offset_bottom = -16.0
scale = Vector2(6.23088, 4.4053)
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_gtisn")

[node name="Bar" type="TextureProgressBar" parent="."]
offset_left = -45.0
offset_top = -47.0
offset_right = 44.0
offset_bottom = -30.0
nine_patch_stretch = true
texture_under = ExtResource("3_g5spe")
texture_progress = ExtResource("4_vpdck")

[node name="Timer" type="Timer" parent="."]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_h7uo0")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
